<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YubiNotes</string>
    <string name="action_settings">Settings</string>
    <string name="action_hints">Hints</string>
    <string name="all_notes">All Notes</string>
	<string name="action_feedback">Feedback</string>
    <string name="action_new_note">New Note</string>
    <string name="action_new_folder">New Folder</string>
    <string name="action_share">Share</string>
    <string name="keys_locked">Notes locked!</string>
    <string name="keys_unlocked">Notes unlocked!</string>
    <string name="unlock_first">Unlock notes first!</string>
    <string name="status_notes_unlocked">Notes are currently unlocked</string>
    <string name="status_notes_locked">Notes are currently locked</string>
    
    <!--  Unlock Dialog -->
    <string name="action_lock">Lock</string>
    <string name="yubi_disabled">Yubikey mode not enabled</string>
    
    <!--  Welcome Dialog -->
    <string name="welcome_title">Welcome to YubiNotes!</string>
    <string name="welcome_description">Please pick a mode</string>
    <string name="welcome_hint">You can change modes later, but you\'ll loose your notes if you do</string>
    <string name="use_yubi">YubiKey Mode</string>
    <string name="use_password">Password Mode</string>
    <string name="yubi_title">YubiKey Mode</string>
    <string name="yubi_description">With a YubiKey NEO and an NFC capable device, you can quickly unlock your notes by simply tapping the device with your YubiKey.</string>
    <string name="password_title">Password Mode</string>
    <string name="password_description">You will be able to unlock your notes by supplying your user set password. NOTE: If you forget your password, your notes are lost forever.</string>
    <string name="yubi_confirmation">To begin, scan your YubiKey using NFC</string>
    <string name="yubi_no_nfc">No NFC capabilities detected. Please make sure you have NFC enabled. If not, you can disable YubiKey mode in app preferences</string>
    <string name="password_confirmation">You will be asked to set your password when you start creating notes</string>
    
    <!-- Password Dialog -->
    
    <string name="enter_password">Enter Password</string>
    <string name="password_hint">Password</string>
    <string name="password_submit">Submit</string>
    <string name="wrong_password">Incorrect Password</string>
    <string name="set_password">Set New Password</string>
    
    <!-- New Note Dialog -->
    <string name="note_title_hint">Title</string>
    <string name="note_text_hint">Text</string>
    <string name="note_create">Create</string>
    <string name="note_cancel">Cancel</string>
    <string name="new_note">New Note</string>
    
    <!-- New Folder Dialog -->
    <string name="new_folder">New Folder</string>
    
    <!-- View Note Dialog -->
    <string name="save_note">Save</string>
    
    <!--  Notes list  -->
    <string name="note_delete">Delete</string>
    <string name="note_trashed">Note trashed</string>
 	<string name="note_deleted">Note deleted</string>
 	<string name="note_starred">Note added to favorites</string>
 	<string name="note_unstarred">Note removed from favorites</string>
 	<string name="action_favorite">Favorite</string>
 	<string name="note_fav">Favorite</string>
 	
 	<!-- Prefs -->
 	<string name="prefs_yubinotes">Preferences</string>
 	<string name="prefs_summary">YubiNote Preferences</string>
 	<string name="prefs_general">General</string>
 	<string name="prefs_security">Security</string>
 	<string name="prefs_autolock">Automatic lock</string>
 	<string name="prefs_autolock_summary">Automatically lock notes when leaving notes list</string>
 	<string name="prefs_use_yubikey">YubiKey Mode</string>
 	<string name="prefs_use_yubikey_summary">Use your YubiKey NEO for locking/unlocking notes</string>
 	<string name="prefs_use_trash">Use Trash</string>
 	<string name="prefs_use_trash_summary">Deleted notes can be found in trash</string>
 	<string name="prefs_timelock">Timer lock</string>
 	<string name="prefs_timelock_summary">Lock notes automatically after a specified period of time</string>
 	<string name="prefs_timelock_interval">Time lock interval</string>
 	<string name="prefs_timelock_interval_summary">The amount of seconds to wait before locking the notes</string>
 	<string name="prefs_ignore_lock">Ignore lock</string>
 	<string name="prefs_ignore_lock_summary">Enable this if you want to see encrypted data when notes are locked</string>
	<string name="prefs_timelock_notification">Show statusbar notification</string>
	<string name="prefs_timelock_notification_summary">Show a notification icon indicating the status of the the timer lock</string>
 	<!--  Widget -->
 	<string name="widget_label">YubiNotes</string>
 	
 	<!-- Share -->
 	<string name="share_title">[YubiNotes]</string>
 	<string name="share_multiple_notes">Shared Notes</string>
 	<string name="share_no_selection">No notes selected</string>
 	
 	<!-- Notification -->
 	<string name="notify_lock_title">YubiNotes</string>
 	<string name="notify_lock_text">Notes will lock in</string>
 	<string name="generic_seconds">seconds</string>
 	<string name="noitfy_lock_pending">Waiting for user</string>
</resources>