<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

	<EditText
        android:id="@+id/textViewNewNoteTitle"
        android:inputType="textShortMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/note_title_hint" />

	<EditText
	    android:id="@+id/textViewNewNoteText"
	    android:inputType="textMultiLine|textNoSuggestions"
	    android:gravity="top|left"
	    android:layout_below="@+id/textViewNewNoteTitle"
	    android:layout_width="match_parent"
	    android:layout_height="200dp"
	    android:hint="@string/note_text_hint"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/textViewLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="10dp"
	    android:textColor="#7bab32"
        android:textSize="23sp"
	    android:text="@string/new_note" />

</RelativeLayout>